--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Sobre mim</h3>
             <p data-aos="fade-up" data-aos-delay="90">
-            <p> Graduanda em Análise e Desenvolvimento de Sistemas e Estagiária na Transalvador. Minhas especialidades incluem o aprendizado de novas habilidades e linguagens de programação, resolução de problemas, princípios de design responsivo, otimização de sites e os métodos de organização do código Model View Controller. HTML, CSS, PHP e SQL.</p>
+            <p> Graduanda em Análise e Desenvolvimento de Sistemas e Estagiária na Transalvador. Minhas especialidades incluem o aprendizado de novas habilidades e linguagens de programação, resolução de problemas, princípios de design responsivo, otimização de sites e os métodos de organização do código Model -View - Controller. HTML5, CSS3, PHP, SQL, Yii2 e Git.</p>
           </p>
           </div>
         </div>
