--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Olá,</h1>
           <h1>Eu sou a Ana Siqueira!</h1>
-          <h2>Desenvolvedora Web PHP</h2>
+          <h2>Developer</h2>
           <a href="https://api.whatsapp.com/send?phone=5571993159083" class="btn-get-started" target="_blank">Vamos conversar?! </a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="img/banner-image.jpg" class="img-fluid animated" alt="" width="90%">
+          <img src="img/office-desk-animation.gif" class="img-fluid animated" alt="" width="90%">
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Sobre mim</h3>
             <p data-aos="fade-up" data-aos-delay="90">
-            <p> Graduanda em Análise e Desenvolvimento de Sistemas e Estagiária na Transalvador. Minhas especialidades incluem o aprendizado de novas habilidades e linguagens de programação, resolução de problemas, princípios de design responsivo, otimização de sites e os métodos de organização do código Model -View - Controller. HTML5, CSS3, PHP, SQL, Yii2 e Git.</p>
+            <p>Graduanda em Análise e Desenvolvimento de Sistemas e Developer pela Stefanini. Sou apaixonada por tecnologia e por mudar a vida das pessoas atráves da programação, procuro me manter atualizada.</p>
           </p>
           </div>
         </div>
@@ -133,7 +133,7 @@
               <p class="description">O PHP (um acrônimo recursivo para PHP: Hypertext Preprocessor ) é uma linguagem de script open source de uso geral, muito utilizada</p>
             </div>
           </div>
-
+          <br>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="fas fa-database"></i></div>
