--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
           </div>
           <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
+              <div class="icon"><i class="fab fa-react"></i></div>
+              <h4 class="title"><a>React</a></h4>
+              <p class="description">O React é uma biblioteca JavaScript de código aberto com foco em criar interfaces de usuário em páginas web.</p>
+            </div>
+          </div>
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
               <div class="icon"><i class="fab fa-bootstrap"></i></div>
               <h4 class="title"><a>Bootstrap</a></h4>
               <p class="description">É um framework web para desenvolvimento de componentes de interface e front-end para sites. </p>
@@ -148,7 +155,13 @@
               <p class="description">O PHP (um acrônimo recursivo para PHP: Hypertext Preprocessor ) é uma linguagem de script open source de uso geral, muito utilizada</p>
             </div>
           </div>
-          
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="fab fa-php"></i></div>
+              <h4 class="title"><a></a></h4>
+              <p class="description">O PHP (um acrônimo recursivo para PHP: Hypertext Preprocessor ) é uma linguagem de script open source de uso geral, muito utilizada</p>
+            </div>
+          </div>
          
         </div>
 
