--- a/index.html
+++ b/index.html
@@ -157,12 +157,19 @@
           </div>
           <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
-              <div class="icon"><i class="fab fa-php"></i></div>
-              <h4 class="title"><a></a></h4>
-              <p class="description">O PHP (um acrônimo recursivo para PHP: Hypertext Preprocessor ) é uma linguagem de script open source de uso geral, muito utilizada</p>
+              <div class="icon"><i class="fas fa-database"></i></div>
+              <h4 class="title"><a>PostgreSQL</a></h4>
+              <p class="description">É um sistema gerenciador de banco de dados objeto relacional</p>
             </div>
           </div>
-         
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="fab fa-github"></i></div>
+              <h4 class="title"><a>GitHub</a></h4>
+              <p class="description"> é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
+            </div>
+          </div>
+      
         </div>
 
       </div>
