--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="icon-box">
               <div class="icon"><i class="fab fa-github"></i></div>
               <h4 class="title"><a>GitHub</a></h4>
-              <p class="description"> é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
+              <p class="description"> É uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
             </div>
           </div>
       
