--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-lg-5 pt-4 pt-lg-0">
             <h3 data-aos="fade-up">Sobre mim</h3>
             <p data-aos="fade-up" data-aos-delay="90">
-            <p>Graduanda em Análise e Desenvolvimento de Sistemas e Front-end Developer pela Stefanini. Sou apaixonada por tecnologia e por mudar a vida das pessoas atráves da programação, estou sempre em busca de novos conhecimentos. Os desafios nos fazem crescer e nos tiram da zona de conforto, permitindo que nos tornemos melhores profissionais!! </p>
+            <p>System Analyst e Software Developer . Sou apaixonada por tecnologia e por mudar a vida das pessoas atráves da programação, estou sempre em busca de novos conhecimentos. Os desafios nos fazem crescer e nos tiram da zona de conforto, permitindo que nos tornemos melhores profissionais!! </p>
           </p>
           </div>
         </div>
