--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Olá,</h1>
           <h1>Eu sou a Ana Siqueira!</h1>
-          <h2>Front-end Developer</h2>
+          <h2>System Analyst e Software Developer</h2>
           <a href="https://api.whatsapp.com/send?phone=5571993159083" class="btn-get-started" target="_blank">Vamos conversar?! </a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
