--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
           <div class="col-lg-5 pt-4 pt-lg-0">
             <h3 data-aos="fade-up">Sobre mim</h3>
             <p data-aos="fade-up" data-aos-delay="90">
-            <p>System Analyst e Software Developer . Sou apaixonada por tecnologia e por mudar a vida das pessoas atráves da programação, estou sempre em busca de novos conhecimentos. Os desafios nos fazem crescer e nos tiram da zona de conforto, permitindo que nos tornemos melhores profissionais!! </p>
+            <p>Sou apaixonada por tecnologia e por mudar a vida das pessoas através da programação. Estou sempre em busca de novos conhecimentos e acredito que os desafios nos fazem crescer e nos tiram da zona de conforto, permitindo que nos tornemos melhores profissionais.
+              Profissional com foco no Front End, possuo experiência como Desenvolvedora entregando aplicações responsivas e funcionais para facilitar o dia a dia dos usuários.
+              Atuação em diferentes projetos, sempre tendo como foco a entrega de um código limpo e a garantia de uma ótima experiência para o usuário.
+              Estou em constante aprendizado e atualmente meu foco é em tecnologias voltadas para o Front End como Javascript, Typescript e React. Além disso, sou uma profissional com fácil adaptação e capacidade de aprendizado rápido. </p>
           </p>
           </div>
         </div>
@@ -138,6 +141,13 @@
               <div class="icon"><i class="fab fa-react"></i></div>
               <h4 class="title"><a>React</a></h4>
               <p class="description">O React é uma biblioteca JavaScript de código aberto com foco em criar interfaces de usuário em páginas web.</p>
+            </div>
+          </div>
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="fab fa-nextjs"></i></div>
+              <h4 class="title"><a>Next.js</a></h4>
+              <p class="description"> o Next.js permite que você crie aplicativos web de alta qualidade com o poder dos componentes React</p>
             </div>
           </div>
           <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
@@ -250,7 +260,7 @@
     <div class="container py-4">
       <div class="copyright">
         <p class="center">
-          Ana Siqueira<span class="text-danger">&hearts;</span>2022</p>
+          Ana Siqueira<span class="text-danger">&hearts;</span>2024</p>
       </div>
     </div>
   </footer>
