--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Olá,</h1>
           <h1>Eu sou a Ana Siqueira!</h1>
-          <h2>System Analyst e Software Developer</h2>
+          <h2>Software Developer</h2>
           <a href="https://api.whatsapp.com/send?phone=5571993159083" class="btn-get-started" target="_blank">Vamos conversar?! </a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
@@ -178,6 +178,25 @@
               <h4 class="title"><a>GitHub</a></h4>
               <p class="description"> É uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
             </div>
+          </div>
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="fab fa-strapi"></i></div>
+              <h4 class="title"><a>Strapi</a></h4>
+              <p class="description"> </p>
+            </div>
+          <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="fab fa-github"></i></div>
+              <h4 class="title"><a>Payload</a></h4>
+              <p class="description"> </p>
+            </div>
+            <div class="col-md-8 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+              <div class="icon-box">
+                <div class="icon"><i class="fab fa-tailwindcss"></i></div>
+                <h4 class="title"><a>Tailwindcss</a></h4>
+                <p class="description"> Um framework CSS voltado para utilidades, repleto de classes como flex , pt-4 , text-center e rotate-90 que podem ser compostas para criar qualquer design, diretamente na sua marcação.</p>
+              </div>
           </div>
       
         </div>
